# crypto-swiss-knife

./: Cargo.toml  README.md
.github/workflows/: main.yml  super-linter.yml
src/: aes_only.rs  algos.rs  classical_ciphers.rs  main.rs
src/algorithms/: README.md  TEMPLATE_algorithm.rs  aes_only.rs  classical_ciphers.rs  gen_key_pair.rs  hash.rs  math.rs  mod.rs  rsa_hybrid.rs
src/components/: README.md  TEMPLATE_component.rs  aes.rs  caesar.rs  cipher_component.rs  hash.rs  mod.rs  playfair.rs  vigenere.rs
src/tabs/: README.md  TEMPLATE_tab.rs  classical.rs  misc.rs  mod.rs  symmetric.rs
